fix breadcrumb alignment

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -22,12 +22,9 @@
 
   .main-content-wrap {
 
-    .main-content {
-
-      @include mq(lg) {
-        max-width: $content-width;
-        margin: 0 auto;
-      }
+    @include mq(lg) {
+      max-width: $content-width;
+      margin: 0 auto;
     }
   }
 }
